# ferritebar

./: CLAUDE.md  Cargo.toml  Human-Smoke-3-15.md  Smoke-Human-03-29.md  TASKBOARD.md  config.example.toml  ferritebar-v0.1.0-linux-x86_64.tar.xz  flake.nix  release.sh  result  runtime-libs.md  status.yaml  theme-contrast-report.md
src/: app.rs  bar.rs  ipc.rs  main.rs  power_menu.rs  theme.rs  toggle_menu.rs
src/config/: mod.rs  types.rs
src/modules/: agent_usage.rs  api_spend.rs  audio.rs  battery.rs  clock.rs  meminfo.rs  memory.rs  mod.rs  network.rs  power.rs  script.rs  swap.rs  taskbar.rs  tray.rs  weather.rs  workspaces.rs
src/settings/: mod.rs
src/widgets/: mini_bar.rs  mod.rs
traverse/: app-runtime.md  bar-shell-surface.md  design-tokens.md  feature-index.md  ferritebar-config.md  ipc-bus.md  mini-bar-widget.md  module-host.md  polling-status-modules.md  power-menu-surface.md  taskbar-toplevel-observer.md  theme-css-pipeline.md  thread-boundary-bridge.md  tray-integration.md  workspace-observer.md
