[package]
name = "ferritebar"
version = "0.1.0"
edition = "2021"
description = "A GTK4 Wayland status bar"

[dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["v4_12"] }
gtk-layer-shell = { package = "gtk4-layer-shell", version = "0.6" }
glib = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "sync", "io-util", "fs"] }

toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

system-tray = "0.8"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }


notify = "8"
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
